[workspace]
resolver = "2"
members = ["asyncs-test", "asyncs-sync"]

[workspace.package]
license = "Apache-2.0"
version = "0.3.1"
edition = "2021"
authors = ["Kezhu Wang <kezhuw@gmail.com>"]
homepage = "https://github.com/kezhuw/asyncs"
repository = "https://github.com/kezhuw/asyncs"
documentation = "https://docs.rs/asyncs"

[package]
name = "asyncs"
description = "async runtime agnostic facilities"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

categories = ["asynchronous", "development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# For tests
test = ["spawns-compat", "spawns/executor", "asyncs-test"]

# For binary crates
tokio = ["spawns/tokio"]
smol = ["spawns/smol"]
async-global-executor = ["spawns/async-global-executor"]

# For doc inline of "spawns-core/compat"
spawns-compat = ["spawns-core/compat"]

[dependencies]
async-select = "0.2.1"
asyncs-test = { path = "./asyncs-test", optional = true }
asyncs-sync = { path = "./asyncs-sync" }
spawns = { version = "0.2.4", optional = true }
spawns-core = "1.1.1"

[dev-dependencies]
test-case = "3.3.1"

[package.metadata.docs.rs]
all-features = true
