[package]
name = "asyncs-test"
authors = ["Kezhu Wang <kezhuw@gmail.com>"]
description = "Macros to bootstrap asynchronous tests"
edition.workspace = true
version.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

categories = ["async", "test", "testing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.82"
quote = "1.0.36"
syn = { version = "2.0.61", features = ["full"] }
